quotes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: quotes
  name: quotes
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: quotes
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/cortex-argocd-myapps-sample3-default: "true"
        io.kompose.service: quotes
    spec:
      containers:
        - image: newbeehives/cortex-argocd-myapps-sample3-quotes:1.0
          imagePullPolicy: Always
          name: quotes
          resources: {}
      restartPolicy: Always
status: {}
