cortex-argocd-myapps-sample3-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: cortex-argocd-myapps-sample3-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/cortex-argocd-myapps-sample3-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/cortex-argocd-myapps-sample3-default: "true"
